# lektor-tekir

./: CHANGES.rst  ICONS.txt  LICENSE.txt  Makefile  README.rst  lektor_tekir.pot  messages.pot  pyproject.toml  requirements-dev.txt  requirements.txt
lektor_tekir/: api.py  cli.py  dash.py  utils.py
lektor_tekir/static/: color-mode.js  delete-confirm.js  delete-modal.js  tekir-admin.css  tekir-admin.js
lektor_tekir/templates/: tekir_attachment.html  tekir_attachment_edit.html  tekir_attachments.html  tekir_base.html  tekir_breadcrumbs.html  tekir_content_edit.html  tekir_contents.html  tekir_dashboard.html  tekir_fields.html  tekir_flowblock.html  tekir_macros.html  tekir_overview.html  tekir_preferences.html  tekir_subpages.html  tekir_summary.html
lektor_tekir/templates/partials/: attachment-summary.html  changes-dialog.html  content-attachments.html  content-operations.html  content-subpages.html  content-summary.html  content-translations.html  delete-dialog.html  error-dialog.html  navigables.html  navigate-dialog.html  new-subpage-dialog.html  publish-dialog.html  save-dialog.html  site-output.html  site-summary.html  upload-dialog.html
lektor_tekir/translations/tr/LC_MESSAGES/: lektor_tekir.po  messages.po
lektor_tekir_admin/: api.py  cli.py  dash.py
lektor_tekir_admin/static/: tekir-admin.css
lektor_tekir_admin/templates/: tekir_base.html  tekir_content_edit.html  tekir_contents.html  tekir_dashboard.html
lektor_tekir_admin/translations/tr/LC_MESSAGES/: messages.po
lektorly/: api.py  cli.py  dash.py
lektorly/static/: lektorly.css
lektorly/templates/: lektorly_base.html  lektorly_contents.html  lektorly_dashboard.html
lektorly/translations/tr/LC_MESSAGES/: messages.po
