[project]
name = "lektor-tekir"
version = "0.5"
description = "An alternative admin panel for Lektor."
readme = "README.rst"

authors = [{name = "H. Turgut Uyar", email = "uyar@tekir.org"}]
license = {file = "LICENSE.txt"}

keywords = ["lektor", "cms"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Lektor",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Natural Language :: Turkish",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

requires-python = "~=3.8"
dependencies = ["lektor", "python-slugify", "flask-babel"]

[project.optional-dependencies]
types = ["mypy", "types-python-slugify"]
style = ["ruff"]
dev = [
    "lektor-tekir[types,style]",
    "babel",
    "build",
    "twine",
    "tox",
]

[project.scripts]
lektor-tekir = "lektor_tekir.cli:main"

[project.urls]
repository = "https://github.com/uyar/lektor-tekir"

[tool.setuptools]
packages = ["lektor_tekir"]
include-package-data = false

[tool.setuptools.package-data]
lektor_tekir = ["templates/**/*", "static/**/*", "translations/**/*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E731"]
line-length = 79

[tool.ruff.isort]
lines-after-imports = 2

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = types, style
isolated_build = True

[testenv:types]
extras = types
commands =
    mypy lektor_tekir

[testenv:style]
skip_install = true
deps =
    ruff
commands =
    ruff lektor_tekir

[testenv:flake8]
skip_install = true
deps =
    flake8
    flake8-isort
commands =
    flake8 lektor_tekir

[testenv:package]
skip_install = true
deps =
    babel
    build
    twine
commands =
    pybabel compile -D lektor_tekir -d lektor_tekir/translations/
    python -c "import shutil; shutil.rmtree('dist', ignore_errors=True)"
    python -m build
    twine check dist/*
"""

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
